--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#999999" android:state_enabled="false"/>
-    <item android:color="@color/colorAccent" android:state_enabled="true"/>
+    <item android:color="#999999"
+          android:drawable="@drawable/ic_send_black_24dp"
+          android:state_enabled="false"/>
+
+    <item android:color="@color/colorAccent"
+          android:drawable="@drawable/ic_send_enabled_24dp"
+          android:state_enabled="true"/>
 </selector>
