--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#E65100</color>
+    <color name="colorPrimary">#4db6ac</color>
+    <color name="colorPrimaryDark">#525252</color>
     <color name="colorAccent">#2E7D32</color>
     <color name="colorTitle">#ffffff</color>
+    <color name="chat_item_background">#762962e8</color>
+    <color name="chat_send_background">#4db6ac</color>
 </resources>
